<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/speech_header"
        app:icon="@drawable/baseline_audiotrack_24">

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <SeekBarPreference
            app:key="volume"
            app:title="@string/volume"
            app:showSeekBarValue="true"
            app:defaultValue="50"/>

        <SeekBarPreference
            app:key="speed"
            app:title="@string/speed"
            app:min="0"
            app:showSeekBarValue="true"
            app:defaultValue="5"
            android:max="10"/>


        <ListPreference
            app:defaultValue="0"
            app:entries="@array/voice_entries"
            app:entryValues="@array/voice_values"
            app:key="voice"
            app:title="@string/voice_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_settings"
        android:icon="@drawable/icon_settings_30">

        <ListPreference
            app:key="lang"
            android:title="@string/language_title"
            android:entries="@array/lang_entries"
            android:entryValues="@array/lang_values"
            app:defaultValue="ru"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>